<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GoWhere?</string>

    <string name="Miles">miles</string>
    <string name="Kilometers">kilometers</string>
    
    <!-- Event Creation Strings -->
    <string name="Create_Event_Name">Event Name</string>
    <string name="Create_Event_Description">Description</string>
    <string name="Create_Event_Address">Address</string>
    <string name="Create_Event_Time">Time of Event</string>
    <string name="Create_Event_Change_Time_Button">Change Time</string>
    <string name="Create_Event_Date">Event Date</string>
    <string name="Create_Event_Change_Date_Button">Change Date</string>
    <string name="Browse_Picture_Button">Browse Pictures</string>
    <string name="Submit_Button">Submit</string>
    <string name="Create_Event_Alert_Dialog_Title">No Internet Connection</string>
    <string name="Create_Event_Alert_Dialog_Text">Your device is not connected to the internet.</string>
    <!-- Event List Strings -->
    <string name="Event_List_Title">Events</string>
    
    <!-- EventList Item Strings -->
    <string name="Image_Content_Description">Event Icon</string>
    <string name="Event_Item_Time">Time:</string>
    <string name="Event_Item_Date">Date:</string>
    <string name="Event_Item_Distance">away.</string>
    
    
    <!-- Event Class Labels -->
    <string name="Event_Class_Distance">Distance:</string>
    <string name="Event_Class_Time">Time:</string>
    <string name="Event_Class_Date">Date:</string>
    <string name="Event_Class_Description">Description</string>
    
    <!-- Refresh Events Strings -->
    <string name="Refresh_Events_Dialog">Loading&#8230;</string>
    
    <!-- Upload Event Strings -->
    <string name="Upload_Event_Dialog">Uploading&#8230;</string>
    <string name="Upload_Event_Alert_Dialog_Title">No address found</string>
    <string name="Upload_Event_Alert_Dialog_Text">No location could be resolved from the given address.
        Please check the address and try again.</string>
    
    
    <!-- Menu Labels -->
	<string name="menu_refresh">Refresh</string>
	<string name="menu_prefs">Preferences</string>
	
	
	
	<!-- Event Search Strings -->
	<string name="Search_Where">Where are the events you\'re looking for?</string>
	<string name="Search_Near">Near&#8230;</string>
	<string-array name="location_array">
        <item>My Current Location</item>
        <item>A Specific Address</item>
        <item>Other</item>       
    </string-array>
	<string name="Search_Specify_Location">Please specify a location</string> 
	<string name="Search_Specify_Address">Please specify an address</string>
	<string name="Search_Distance">How far away from there would you like to search?</string>  
    <string-array name="distance_array">
        <item>1 mile</item>
        <item>2 miles</item>
        <item>5 miles</item> 
        <item>Other</item> 
    </string-array>
    <string-array name="distance_array_km">
        <item>1 kilometer</item>
        <item>2 kilometers</item>
        <item>5 kilometers</item> 
        <item>Other</item> 
    </string-array>
    <string name="Search_Specify_Distance">Please specify a distance in</string>
    
    <string name="Search_Change_Time_Button">Change Time</string>
    <string name="Search_Change_Date_Button">Change Date</string>
    <string name="Search_Find_Events_Button">Find Events</string>
    
    
    <!-- GPS off notification Strings -->
    <string name="GPS_Notification_Ticker_Text">GoWhere? needs access to location.</string>
    <string name="GPS_Notification_Content_Title">Location Information Desired</string>
    <string name="GPS_Notification_Content_Text">For best results please turn on GPS.</string>
    
    <!-- Preference Menu Strings -->
    <string name="Prefs_Location_Frequency_Title">Location Update Frequency</string>
    <string name="Prefs_Location_Frequency_Summary">A higher frequency will consume more battery</string>
    <string-array name="locationfrequency">
        <item>2 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>       
    </string-array>
	
</resources>