<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout_Create_Event"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bgall"
    android:orientation="vertical"
    android:focusable="true" 
    android:focusableInTouchMode="true"
     >

    <TextView
        android:id="@+id/Text_Event_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Name"
        android:paddingLeft="5dip"
        android:textColor="@android:color/white"
        android:textSize="19dp"
        android:textStyle="bold"  />

    <EditText
        android:id="@+id/Edit_Event_Name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text">
    </EditText>

    <TextView
        android:id="@+id/Text_Create_Event_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Description"
        android:paddingLeft="5dip"
		android:textColor="@android:color/white"
		android:textSize="19dip"
		android:textStyle="bold" />

    <EditText
        android:id="@+id/Edit_Create_Event_Description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:maxLength="800"
        android:maxLines="15" />

    <TextView
        android:id="@+id/Text_Create_Event_Address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Address"
        android:paddingLeft="5dip"
		android:textColor="@android:color/white"
		android:textSize="19dip"
		android:textStyle="bold" />

    <EditText
        android:id="@+id/Edit_Create_Event_Address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress" />

    <TextView
        android:id="@+id/Text_Create_Event_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Time"
        android:paddingLeft="5dip"
		android:textColor="@android:color/white"
		android:textSize="19dip"
		android:textStyle="bold" />
    
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    
    <TextView
        android:id="@+id/Text_Create_Chosen_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:textColor="@android:color/white"
		android:textSize="20dp" />

    <Button
        android:id="@+id/Button_Create_Event_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Change_Time_Button"
        android:textSize="17dp"
        android:layout_marginLeft="20dip" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/Text_Create_Event_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Date"
        android:paddingLeft="5dip"
        android:textColor="@android:color/white"
		android:textSize="19dip"
        android:textStyle="bold" />
    
    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
     >
    
    <TextView
        android:id="@+id/Text_Create_Chosen_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:textColor="@android:color/white"
		android:textSize="20dip" />

    <Button
        android:id="@+id/Button_Create_Event_Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_Event_Change_Date_Button"
        android:textSize="17dp"
        android:layout_marginLeft="20dip" />
    </LinearLayout>
    
    <Button
        android:id="@+id/Button_Create_Event_Picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Browse_Picture_Button"
        android:visible="false" />

    <Button
        android:id="@+id/Button_submit_event_info"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Submit_Button"
        android:textSize="22dip"
        android:layout_marginTop="15dip"
        android:layout_gravity="center" />

</LinearLayout>
</ScrollView>